--- a/DC-UBP-Actividad1.html
+++ b/DC-UBP-Actividad1.html
@@ -67,7 +67,15 @@ En esta actividad te invitamos a leer algunas historias sobre experiencias que a
 
 [[ Noticias -&gt; Noticias]]
 
-</tw-passagedata><tw-passagedata pid="3" name=" Dejar de subir fotos" tags="" position="300,625" size="100,100">
+
+
+
+
+
+
+
+
+[[Recursos -&gt;Recursos]]</tw-passagedata><tw-passagedata pid="3" name=" Dejar de subir fotos" tags="" position="300,625" size="100,100">
 
 &lt;img src=&quot;drawing-3.jpg&quot; width=&quot;400px&quot; height=&quot;400px&quot; class=&quot;responsive&quot;&gt;
 
@@ -121,6 +129,8 @@ Cuestionario Final:
 
 [[Dejar de subir fotos-&gt; Dejar de subir fotos]]
 [[Hablar con un adulto -&gt; Hablar con un adulto]]</tw-passagedata><tw-passagedata pid="7" name=" Amigo Virtual" tags="" position="625,400" size="100,100">Lucía tenía catorce años y era una chica extrovertida, apasionada por la música. Como muchos adolescentes, pasaba mucho tiempo en línea, especialmente en foros y redes sociales donde compartía sus intereses y conocía a personas con pasiones similares.
+ 
+ &lt;img src=&quot;music-2.jpeg&quot; class=&quot;responsive&quot;&gt;  
  
 Un día, mientras navegaba por un foro de música, recibió un mensaje privado de un usuario llamado &quot;Melodía96&quot;. El perfil decía que era un chico de quince años, amante de las mismas bandas de música que Lucía adoraba. Comenzaron a hablar sobre sus canciones favoritas, conciertos a los que querían asistir y cómo la música les ayudaba a superar los momentos difíciles.
  
@@ -179,6 +189,8 @@ Cuestionario Final:
 
 [[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="12" name=" Reto de selfies" tags="" position="975,400" size="100,100">Lucas es conocido entre sus amigos por sus trucos en su bicicleta. Un día, mientras navegaba por sus redes sociales, se topó con un nuevo desafío viral: el &quot;Desafío de la Selfie Extrema&quot;. Consistía en tomarse una selfie en el lugar más peligroso que uno pudiera encontrar.
  
+ &lt;img src=&quot;bike-1.jpeg&quot; class=&quot;responsive&quot;&gt;
+ 
 Sus amigos ya habían comenzado a participar, y las fotos recibían cientos de &quot;likes&quot; y comentarios. Sintiendo la presión de no quedarse atrás, Lucas decidió que debía unirse al reto.
  
 Lucas sabía exactamente dónde quería tomar su selfie: en la cornisa del edificio abandonado cerca de su casa. Era alto, peligroso y perfecto para impresionar a todos.
@@ -191,7 +203,9 @@ Lucas sabía exactamente dónde quería tomar su selfie: en la cornisa del edifi
  
 </tw-passagedata><tw-passagedata pid="13" name=" Ir solo" tags="" position="800,775" size="100,100">Hay muchos desafíos de este tipo dando vueltas en las redes, y muchos de ellos terminan con malas noticias.
 Lucas lo pensó mejor. ¿Son los “likes” tan importantes como para correr el riesgo de accidentes o incluso algo peor?
- 
+
+&lt;img src=&quot;bike-2.jpeg&quot; class=&quot;responsive&quot;&gt;  
+
 ¿Qué crees que debería hacer Lucas?
  
  
@@ -247,8 +261,9 @@ Cuestionario Final:
 
 [[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="17" name=" Oferta Irresistible" tags="" position="1300,400" size="100,100">Ana era una joven de diecisiete años apasionada por la moda. Siempre estaba al tanto de las últimas tendencias y soñaba con tener un guardarropa lleno de ropa de diseñadores famosos. Un día, mientras navegaba por las redes sociales, se encontró con una oferta increíble: un sitio web vendía productos de marcas de lujo a precios ridículamente bajos. Bolsos de diseñador, zapatos y ropa, todo a una fracción de su costo habitual.
  
-Intrigada, Ana decidió explorar la página web. Las fotos de los productos eran deslumbrantes, y los comentarios de los compradores parecían genuinos y entusiastas. Sin embargo, algo en su interior le decía que esto era demasiado bueno para ser verdad. Después de agregar varios artículos a su carrito, Ana se detuvo un momento y verdad.
+Intrigada, Ana decidió explorar la página web. Las fotos de los productos eran deslumbrantes, y los comentarios de los compradores parecían genuinos y entusiastas. Sin embargo, algo en su interior le decía que esto era demasiado bueno para ser verdad. Después de agregar varios artículos a su carrito, Ana se detuvo un momento.
  
+ &lt;img src=&quot;descuento-1.jpg&quot; class=&quot;responsive&quot;&gt;
  
 ¿Qué hizo Ana?
  
@@ -433,12 +448,14 @@ Cuestionario Final:
 &lt;/div&gt;
 
 
-[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="28" name="Untitled Passage" tags="" position="75,175" size="100,100">
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="28" name="Recursos" tags="" position="700,100" size="100,100">
 
 
-Photo by Karolina Kaboompics: https://www.pexels.com/photo/abstract-background-with-turquoise-color-4040649/
+Fondo: Photo by Karolina Kaboompics: https://www.pexels.com/photo/abstract-background-with-turquoise-color-4040649/
 
-</tw-passagedata><tw-passagedata pid="29" name=" Hablar con alguien" tags="" position="300,1000" size="100,100">(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+Imagenes iniciadas con Ideogram y en algunos casos editadas con herramientas gráficas.
+
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="29" name=" Hablar con alguien" tags="" position="300,1000" size="100,100">(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
 [&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
 Cuestionario Final:
 
